# Water-pouring-robot-simulation

./: README.md
workshop/dev/docker/: docker-compose.yml
workshop/dev/docker/tests/: test_moveit.py  test_vision.py
workshop/dev/docker/workspace/: HACKATHON_GUIDE.md  disable_shm.xml  test_feetech.py  test_lerobot.py  test_mujoco_gui.py
workshop/dev/docker/workspace/src/: test_collisions.py
workshop/dev/docker/workspace/src/so101_gazebo/: CMakeLists.txt  package.xml
workshop/dev/docker/workspace/src/so101_gazebo/config/: follower_gazebo.rviz  foxglove_params.yaml
workshop/dev/docker/workspace/src/so101_gazebo/launch/: pour_agent.launch.py  so101_gazebo.launch.py
workshop/dev/docker/workspace/src/so101_gazebo/scripts/: episode_logger.py  foxglove_env_publisher.py  llm_pour_agent_node.py  local_llm_client.py  motion_executor_node.py  object_detector_3d.py  self_training_agent.py  so101_gazebo_bridge.py  vision_detector_node.py  web_dashboard.py
workshop/dev/docker/workspace/src/so101_gazebo/worlds/: empty_world.sdf
workshop/dev/docker/workspace/src/so101_leader_moveit_config/: .setup_assistant
workshop/dev/docker/workspace/src/so101_moveit_config/config/: kinematics.yaml  ros2_controllers.yaml
workshop/dev/docker/workspace/src/so101_mujoco/: CMakeLists.txt
workshop/dev/docker/workspace/src/so101_mujoco/launch/: pour_agent_mujoco.launch.py
workshop/dev/docker/workspace/src/so101_mujoco/mujoco/: MUJOCO_LOG.TXT  README.md  autonomous_agent.py  debug_vision.py  knowledge.json  llama_gazebo_agent.py  llama_pour_agent.py  llama_pour_learner_agent.py  pour_demo.py  pour_env.py  pour_pipeline.py  scene-prev.xml  scene.xml  scene_backup.xml  side_grasp_demo.py  so101.xml  so101_new_calib.xml  test_ik.py  vision_module.py  yolo_pour_agent.py  yolo_side_grasp.py
workshop/dev/docker/workspace/src/so101_mujoco/scripts/: so101_button_teleop.py  so101_keyboard_teleop.py  so101_mujoco_bridge.py  so101_phone_teleop.py  so101_virtual_joystick.py
workshop/dev/docker/workspace/src/so101_unified_bringup/config/: camera_bridge.yaml
workshop/dev/docker/workspace/src/so101_unified_bringup/include/so101_unified_bringup/: moveit_server.hpp
workshop/dev/docker/workspace/src/so101_unified_bringup/launch/: main.launch.py
workshop/dev/docker/workspace/src/so101_unified_bringup/worlds/: empty_world.sdf
